welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: Missing closing brace `}' assumed here
var fini = false
^BDRBuggle:17: error: '(' expected but identifier found.
						else if litMessage() == "Y"
                                                        ^